2008-04-02 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Change of DataType in src and option files
	* Tag as TrigT1CaloMonitoring-00-03-02

2008-03-20  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Changes to CP tools: change plots to float instead of double,
          move all plots except overall summaries from shift to expert,
          reorganise directories of expert error plots so the directory
          names correspond with the bin labels on the overall summary
          plot.
        * Tag as TrigT1CaloMonitoring-00-03-01

2008-02-20  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * new tool for CP data-simulation comparisons
        * needs TrigT1CaloTools-01-02-00 or later
        * Tag as TrigT1CaloMonitoring-00-03-00

2007-12-14  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
        * JEPTransPerfMon, JEMMon: remove depedency to TrigT1CaloSim
        * Tag as TrigT1CaloMonitoring-00-02-02


2008-02-10  Alan Watson <Alan.Watson@cern.ch>
        * JEPTransPerfMon, JEMMon: correct locations of EnergyTrigger.h,
          JetElementMaker.h
        * Tag as TrigT1CaloMonitoring-00-02-01 

2008-02-08  Alan Watson <Alan.Watson@cern.ch>
        * Change jobOptions to load simulation algorithms from 
          TrigT1CaloSim rather than TrigT1Calo
        * Will work with TrigT1Calo-03-xx-xx only. Branching will
          be needed for further 13.0.x development
        * Tag as TrigT1CaloMonitoring-00-02-00 

2008-02-01  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-21
        * add colz option to 2D plots in CPM monitoring

2008-01-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-20
        * add TriggerMenu-File for LVL1ConfigSvc in JO
	
2008-01-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-19
        * fix memory leaks
        * remove unnecessary data duplication
        * eliminate compiler warning messages
